--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     </title>
   </head>
   <body>
-    <h1>Hello World!</h1>h1>
-    <p>I'm Learning to code!</p>
+    <h1>Hello World!</h1>
+    <p>I'm Learning to code! my first day</p>
   </body>
 </html>
