--- a/index.html
+++ b/index.html
@@ -9,5 +9,7 @@
     <h1>Hello World!</h1>
     <p>I'm Learning to code! my first day</p>
     <p>So I am editing again. I will do some more changes today. //18/07/2025</p>
+    <p>I think i need to chnage the timing, its already too late, writing something here, so i can continue.</p>
+    <p>Maybe i can add a intro , book, favourites movies and some other link?</p>
   </body>
 </html>
