--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
       <li>CSS</li>
       <li>Javascript</li>
       <li>23 july, i didn't get time</li>
+      <li>24th july, again didn't get time</li>
     </ul>
     
     
