--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
       <li>Javascript</li>
       <li>23 july, i didn't get time</li>
       <li>24th july, again didn't get time</li>
-      <li>25th jluy
-      I am going to work on this</li>
+      <li>25th july I am going to work on this</li>
+      <li>26th july, tomorrow for sure</li>
     </ul>
     
     
