--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
       <li>24th july, again didn't get time</li>
       <li>25th july I am going to work on this</li>
       <li>26th july, tomorrow for sure</li>
+      <li>27th july, I am really sorry but maybe i need to do on afternoon time</li>
     </ul>
     
     
