--- a/index.html
+++ b/index.html
@@ -22,6 +22,18 @@
       <li>26th july, tomorrow for sure</li>
       <li>27th july, I am really sorry but maybe i need to do on afternoon time</li>
       <li>28th july, For sure i am gonna edit it tomorrow</li>
+      <li>29th july, instagram need to start asap</li>
+      <li> 2 possible reason:</li>
+      <li>i get nice idea: 5 simple things each day for 100 day challenge</li>
+      <li>which gonna help me to make better</li>
+      <li>help me to connect with like minded people?</li>
+      <li>Time for crushky is coming, only way to do this is going for this challenges</li>
+      <li>because this gonna help in Meditation, Exercise, Book, Coding and Communication</li>
+      <li> I promise to myself, i gonna start instagram only when i am done with making videos and need to post.</li>
+      <li>So takeout this sat and sun to finalize about 5 fields, make some dmeo -7,-6 .. and start  </li>
+      <li> remember best day to start was yesterdays, next best day? today.</li>
+      <li>We know everything compounds, so even matter ! (1% rules)</li>
+      <li> remember the insta videos, where 20-21 are sharing life jounrey, whats problem woth me?</li>
     </ul>
     
     
