--- a/index.html
+++ b/index.html
@@ -34,6 +34,8 @@
       <li> remember best day to start was yesterdays, next best day? today.</li>
       <li>We know everything compounds, so even matter ! (1% rules)</li>
       <li> remember the insta videos, where 20-21 are sharing life jounrey, whats problem woth me?</li>
+      <li>30th july, pfcourse i need to clean this web, I am gonna to finalize most thing on sat, sun</li>
+      <li> Good way will be to make thur, fri as demo day</li>
     </ul>
     
     
