--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@
       <li> remember the insta videos, where 20-21 are sharing life jounrey, whats problem woth me?</li>
       <li>30th july, pfcourse i need to clean this web, I am gonna to finalize most thing on sat, sun</li>
       <li> Good way will be to make thur, fri as demo day</li>
+      <li>31st July: I am tired, I need to sleep</li>
     </ul>
     
     
