--- a/index.html
+++ b/index.html
@@ -39,6 +39,7 @@
       <li>31st July: I am tired, I need to sleep</li>
       <li>1st Aug; SAT is coming, hope all will work out.</li>
 <li>2nd Aug; so finally tomorrow w\, we gonna final.</li>
+      <li>I am working on that, you all need to be clear</li>
       
     </ul>
     
