--- a/index.html
+++ b/index.html
@@ -3,5 +3,7 @@
   <head>
     <title>Hello World</title>
     <h1>Hello World</h1>
+    <p>06th Aug 2025</p>
+    <p>As time ticks away, I'm going to write my favorite quote: 'What we think, we become.' – Buddha</p>
   </head>
 </html>
