--- a/index.html
+++ b/index.html
@@ -5,5 +5,11 @@
     <h1>Hello World</h1>
     <p>06th Aug 2025</p>
     <p>As time ticks away, I'm going to write my favorite quote: 'What we think, we become.' – Buddha</p>
+    <p>07th Aug 2025</p>
+    <p>Still didn't get enough time, posting a link which i cretaed today</p>
+    <a href="https://docs.google.com/spreadsheets/d/1OV59cQU1TPM8sndnwRnoumVI_a8robXUOe2qx8TvHDs/edit?usp=sharing" target="_blank">
+  Open My Google Sheet
+</a>
+
   </head>
 </html>
