--- a/index.html
+++ b/index.html
@@ -2,14 +2,29 @@
 <html>
   <head>
     <title>Hello World</title>
-    <h1>Hello World</h1>
-    <p>06th Aug 2025</p>
+  </head>
+
+  <body>
+    <!-- Navigation Menu -->
+    <Nav>
+      <a href="#general">General</a> |
+      <a href="#blog">Blog</a> 
+    </Nav>
+    <hr>
+
+    <h2 id="general">General</h2>
+    <p>I am Vikram Aditya. I am Learning to Code</p>
+      <p>My Habit Tracker:</p>
+    <a href="https://docs.google.com/spreadsheets/d/1OV59cQU1TPM8sndnwRnoumVI_a8robXUOe2qx8TvHDs/edit?usp=sharing" target="_blank">
+  Habit Tracker </a>
+  </body>
+    <h2 id="blog">Blog</h2>
+    <p><strong>06th Aug 2025</strong></p>
     <p>As time ticks away, I'm going to write my favorite quote: 'What we think, we become.' – Buddha</p>
     <p>07th Aug 2025</p>
-    <p>Still didn't get enough time, posting a link which i cretaed today</p>
+    <p>Still didn't get enough time, posting a link which i creataed today</p>
     <a href="https://docs.google.com/spreadsheets/d/1OV59cQU1TPM8sndnwRnoumVI_a8robXUOe2qx8TvHDs/edit?usp=sharing" target="_blank">
-  Open My Google Sheet
-</a>
+  Habit Tracker </a>
 
-  </head>
+
 </html>
