--- a/index.html
+++ b/index.html
@@ -5,26 +5,36 @@
   </head>
 
   <body>
+
     <!-- Navigation Menu -->
-    <Nav>
+    <nav>
       <a href="#general">General</a> |
-      <a href="#blog">Blog</a> 
-    </Nav>
+      <a href="#blog">Blog</a>
+    </nav>
+
     <hr>
 
+    <!-- General Section -->
     <h2 id="general">General</h2>
-    <p>I am Vikram Aditya. I am Learning to Code</p>
-      <p>My Habit Tracker:</p>
+    <p>I am Vikram Aditya. I am learning to code.</p>
+    <p>My Habit Tracker:</p>
     <a href="https://docs.google.com/spreadsheets/d/1OV59cQU1TPM8sndnwRnoumVI_a8robXUOe2qx8TvHDs/edit?usp=sharing" target="_blank">
-  Habit Tracker </a>
- 
+      Habit Tracker
+    </a>
+
+    <hr>
+
+    <!-- Blog Section -->
     <h2 id="blog">Blog</h2>
+
     <p><strong>06th Aug 2025</strong></p>
     <p>As time ticks away, I'm going to write my favorite quote: 'What we think, we become.' – Buddha</p>
-    <p>07th Aug 2025</p>
-    <p>Still didn't get enough time, posting a link which i creataed today</p>
-    <a href="https://docs.google.com/spreadsheets/d/1OV59cQU1TPM8sndnwRnoumVI_a8robXUOe2qx8TvHDs/edit?usp=sharing" target="_blank">
-  Habit Tracker </a>
- </body>
 
+    <p><strong>07th Aug 2025</strong></p>
+    <p>Still didn't get enough time, posting a link which I created today:</p>
+    <a href="https://docs.google.com/spreadsheets/d/1OV59cQU1TPM8sndnwRnoumVI_a8robXUOe2qx8TvHDs/edit?usp=sharing" target="_blank">
+      Habit Tracker
+    </a>
+
+  </body>
 </html>
