--- a/index.html
+++ b/index.html
@@ -35,6 +35,8 @@
     <a href="https://docs.google.com/spreadsheets/d/1OV59cQU1TPM8sndnwRnoumVI_a8robXUOe2qx8TvHDs/edit?usp=sharing" target="_blank">
       Habit Tracker
     </a>
+       <p><strong>08th Aug 2025</strong></p> 
+        <p>I added section like General & Blogs.</p>
 
   </body>
 </html>
