--- a/index.html
+++ b/index.html
@@ -84,12 +84,24 @@
 
   <script>
     function showSection(sectionId) {
-      document.querySelectorAll('.section-box').forEach(function(section){
-        section.style.display = 'none';
-      });
-      document.getElementById(sectionId).style.display='block';
-    }
-    showSection('about');
+      document.querySelectorAll('.nav-link').forEach(link => {
+    link.addEventListener('click', function (e) {
+        e.preventDefault();
+
+        // Hide all sections
+        document.querySelectorAll('.section').forEach(section => {
+            section.style.display = 'none';
+        });
+
+        // Show the target section
+        const targetId = this.getAttribute('href').substring(1);
+        const targetSection = document.getElementById(targetId);
+        if (targetSection) {
+            targetSection.style.display = 'block';
+        }
+    });
+});
+
   </script>
   
 </body>
