--- a/index.html
+++ b/index.html
@@ -1,148 +1,115 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<meta charset="utf-8">
-<meta name="viewport" content="width=device-width,initial-scale=1">
-<title>The Almanack of a Simple Guy</title>
-<style>
-  :root {
-    --bg: #ffffff;
-    --text: #111111;
-    --accent: #0066cc;
-    --max-width: 800px;
-    --font: "Georgia", serif;
-  }
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width,initial-scale=1" />
+  <title>The Almanack of a Simple Guy</title>
+  <style>
+    body {
+      font-family: Georgia, serif;
+      background: #ffffff;
+      color: #333;
+      margin: 0;
+      padding: 0;
+      line-height: 1.8;
+    }
 
-  body {
-    margin: 0;
-    padding: 0;
-    font-family: var(--font);
-    background-color: var(--bg);
-    color: var(--text);
-    line-height: 1.7;
-  }
+    header {
+      text-align: center;
+      padding: 2rem 1rem;
+      border-bottom: 1px solid #eee;
+    }
 
-  header {
-    padding: 2rem 1rem;
-    text-align: center;
-  }
+    header h1 {
+      margin: 0;
+      font-size: 2rem;
+      font-weight: normal;
+    }
 
-  header h1 {
-    margin: 0 0 0.5rem 0;
-    font-size: 2rem;
-    font-weight: normal;
-  }
+    nav {
+      margin-top: 1rem;
+    }
 
-  nav {
-    text-align: center;
-    margin-top: 1rem;
-  }
+    nav a {
+      color: #333;
+      text-decoration: none;
+      margin: 0 0.6rem;
+    }
 
-  nav a {
-    color: var(--accent);
-    text-decoration: none;
-    margin: 0 0.8rem;
-    font-size: 1rem;
-  }
+    nav a:hover {
+      text-decoration: underline;
+    }
 
-  nav a:hover,
-  nav a.active {
-    text-decoration: underline;
-  }
+    main {
+      max-width: 700px;
+      margin: auto;
+      padding: 2rem 1rem;
+    }
 
-  main {
-    max-width: var(--max-width);
-    margin: 2rem auto;
-    padding: 0 1rem;
-  }
+    section {
+      margin-bottom: 3rem;
+    }
 
-  section {
-    display: none;
-  }
+    section h2 {
+      font-size: 1.5rem;
+      font-weight: normal;
+      margin-bottom: 0.5rem;
+    }
 
-  section h2 {
-    font-size: 1.5rem;
-    margin-bottom: 0.5rem;
-  }
+    a {
+      color: #0066cc;
+    }
 
-  section p {
-    margin-top: 0;
-  }
-
-  footer {
-    text-align: center;
-    font-size: 0.9rem;
-    color: #777;
-    margin: 3rem 0 1rem;
-  }
-</style>
+    a:hover {
+      text-decoration: underline;
+    }
+  </style>
 </head>
 <body>
 
-<header>
-  <h1>The Almanack of a Simple Guy</h1>
-  <nav>
-    <a onclick="showSection('about')" id="link-about">About</a>
-    <a onclick="showSection('finance')" id="link-finance">Finance</a>
-    <a onclick="showSection('books')" id="link-books">Books</a>
-    <a onclick="showSection('workout')" id="link-workout">Workout</a>
-    <a onclick="showSection('vlog')" id="link-vlog">Daily Vlog</a>
-    <a onclick="showSection('contact')" id="link-contact">Contact</a>
-  </nav>
-</header>
+  <header>
+    <h1>The Almanack of a Simple Guy</h1>
+    <nav>
+      <a href="#about">About</a>
+      <a href="#finance">Finance</a>
+      <a href="#books">Books</a>
+      <a href="#workout">Workout</a>
+      <a href="#vlog">Daily Vlog</a>
+      <a href="#contact">Contact</a>
+    </nav>
+  </header>
 
-<main>
-  <section id="about">
-    <h2>About Me</h2>
-    <p>I am Vikram Aditya. I am updating this website.</p>
-  </section>
+  <main>
+    <section id="about">
+      <h2>About me</h2>
+      <p>I am Vikram Aditya. I am updating this website.</p>
+    </section>
 
-  <section id="finance">
-    <h2>Finance</h2>
-    <p>I will be sharing my knowledge on personal finance, investing, and money management.</p>
-  </section>
+    <section id="finance">
+      <h2>Finance</h2>
+      <p>I will be sharing my knowledge on personal finance, investing, and money management.</p>
+    </section>
 
-  <section id="books">
-    <h2>Books</h2>
-    <p>Reviews, summaries, and thoughts from books I read.</p>
-  </section>
+    <section id="books">
+      <h2>Books</h2>
+      <p>Reviews, summaries and thoughts from books I read.</p>
+    </section>
 
-  <section id="workout">
-    <h2>Workout</h2>
-    <p>Sharing my workout journey.</p>
-  </section>
+    <section id="workout">
+      <h2>Workout</h2>
+      <p>Sharing my workout journey.</p>
+    </section>
 
-  <section id="vlog">
-    <h2>Daily Vlog</h2>
-    <p>Short updates about my day-to-day learning and shoots.</p>
-  </section>
+    <section id="vlog">
+      <h2>Daily Vlog</h2>
+      <p>Short updates about my day-to-day learning and shoots.</p>
+    </section>
 
-  <section id="contact">
-    <h2>Contact Me</h2>
-    <p>Email: <a href="mailto:Vikram.aditya.connect@gmail.com">Vikram.aditya.connect@gmail.com</a></p>
-  </section>
-</main>
-
-<footer>
-  &copy; 2025 Vikram Aditya
-</footer>
-
-<script>
-  function showSection(id) {
-    document.querySelectorAll('section').forEach(s => s.style.display = 'none');
-    document.querySelectorAll('nav a').forEach(a => a.classList.remove('active'));
-
-    const sec = document.getElementById(id);
-    if (sec) sec.style.display = 'block';
-
-    const link = document.getElementById('link-' + id);
-    if (link) link.classList.add('active');
-  }
-
-  document.addEventListener('DOMContentLoaded', function() {
-    showSection('about');
-  });
-</script>
+    <section id="contact">
+      <h2>Contact Me</h2>
+      <p>Email: <a href="mailto:Vikram.aditya.connect@gmail.com">Vikram.aditya.connect@gmail.com</a></p>
+    </section>
+  </main>
 
 </body>
 </html>
